--- a/project-overview.html
+++ b/project-overview.html
@@ -121,8 +121,8 @@
         max-width: var(--container);
         margin: 0 auto;
         padding: 18px;
-        height: 100vh;
-        height: 100dvh;
+        min-height: 100vh;
+        min-height: 100dvh;
         display: flex;
         flex-direction: column;
       }
